Remove mysterious "overflow: -moz-scrollbars-none" setting for BorderContainer panes. Not sure why that code was there (although I can see how overflow: hidden makes sense for the BorderContainer itself, rather than it's panes), but it naturally causes scrollbars on the panes to not appear, even when they should. Fixes #5737.
git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@12436 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/dijit.css
+++ b/themes/dijit.css
@@ -625,10 +625,6 @@ body .dijitAlignClient { position: absolute; }
 .dijitBorderContainer {
 	overflow: hidden;
 }
-
-.dj_gecko .dijitBorderContainerPane {
-	overflow: -moz-scrollbars-none;
-}
 	
 .dijitBorderContainer > .dijitTextArea {
 	/* On Safari, for SimpleTextArea inside a BorderContainer,
